--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -130,13 +130,21 @@
 
   @include breakpoint(400px){
     width: 100%;
-    margin-left: 0;
     text-align: left;
     margin-top: 0;
+
+    width: calc(100% + 18vw + 15px);
+    margin-left: calc(-18vw - 15px);
+    text-align: center;
   }
   
   @include breakpoint(500px){
     font-size: 2.5vw;
+  }
+  @include breakpoint(720px){
+    width: 100%;
+    margin-left: 0;
+    text-align: left;
   }
   @include breakpoint(768px){
     font-size: 19px;
