Centering the content on Maintenance page

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1513,6 +1513,17 @@ legend.collapse-processed a:visited {
 #block-panels-mini-header {
   margin-bottom: 0; }
 
+.maintenance-page .l-page {
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column; }
+.maintenance-page .l-header {
+  background: white; }
 .maintenance-page #header-group-wrapper {
   display: inline-block; }
 .maintenance-page #header-site-info {
@@ -1581,7 +1592,8 @@ legend.collapse-processed a:visited {
     .maintenance-page .site-slogan {
       font-size: 19px;
       margin-left: 27px;
-      top: 100px; } }
+      top: 100px;
+      margin-top: -1em; } }
   @media (min-width: 960px) {
     .maintenance-page .site-slogan {
       font-size: 24px;
@@ -1592,9 +1604,31 @@ legend.collapse-processed a:visited {
       font-size: 30px;
       margin-left: 45px;
       top: 147px; } }
-.maintenance-page #content-region {
+.maintenance-page .l-main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  background-color: #f2fbd2;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#f2fbd2), to(#f5f7e7));
+  background-image: linear-gradient(#f2fbd2, #f5f7e7); }
+  .maintenance-page .l-main:before {
+    content: "";
+    height: 33px;
+    width: 100%;
+    background-color: #2f76a5;
+    background: -webkit-gradient(linear, left top, left bottom, from(#2f76a5), to(#144a6e));
+    background: linear-gradient(#2f76a5, #144a6e);
+    border-top: 3px solid #a7ce38; }
+.maintenance-page .l-content {
   text-align: center;
-  margin-top: 5em; }
+  margin: auto 10%; }
 
 #block-superfish-1 {
   display: -webkit-box;
