Adjusting top position of the slogan

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1580,7 +1580,7 @@ legend.collapse-processed a:visited {
         margin-left: -63px; } }
 .maintenance-page .site-slogan {
   position: absolute;
-  top: calc(8.5vw + 39px);
+  top: 11vw;
   margin-left: 4vw;
   border: 0;
   line-height: 1;
