--- a/sass/components/_maintenance.scss
+++ b/sass/components/_maintenance.scss
@@ -71,7 +71,7 @@
 
   .site-slogan {
     position: absolute;
-    top: calc(8.5vw + 39px);
+    top: 11vw;
     margin-left: 4vw;
     border: 0;
 
