--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1523,7 +1523,8 @@ legend.collapse-processed a:visited {
       -ms-flex-flow: column;
           flex-flow: column; }
 .maintenance-page .l-header {
-  background: white; }
+  background: white;
+  padding-top: 1em; }
 .maintenance-page #header-group-wrapper {
   display: inline-block; }
 .maintenance-page #header-site-info {
@@ -1580,7 +1581,7 @@ legend.collapse-processed a:visited {
         margin-left: -63px; } }
 .maintenance-page .site-slogan {
   position: absolute;
-  top: 11vw;
+  top: calc(8.5vw + 27px);
   margin-left: 4vw;
   border: 0;
   line-height: 1;
@@ -1592,18 +1593,18 @@ legend.collapse-processed a:visited {
     .maintenance-page .site-slogan {
       font-size: 19px;
       margin-left: 27px;
-      top: 100px;
+      top: 110px;
       margin-top: -1em; } }
   @media (min-width: 960px) {
     .maintenance-page .site-slogan {
       font-size: 24px;
       margin-left: 40px;
-      top: 128px; } }
+      top: 140px; } }
   @media (min-width: 1200px) {
     .maintenance-page .site-slogan {
       font-size: 30px;
       margin-left: 45px;
-      top: 147px; } }
+      top: 160px; } }
 .maintenance-page .l-main {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -1628,7 +1629,12 @@ legend.collapse-processed a:visited {
     border-top: 3px solid #a7ce38; }
 .maintenance-page .l-content {
   text-align: center;
-  margin: auto 10%; }
+  margin: 10%; }
+  .maintenance-page .l-content h1 {
+    border: 0;
+    text-transform: capitalize;
+    font-weight: bold;
+    margin-bottom: 1em; }
 
 #block-superfish-1 {
   display: -webkit-box;
