--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -3,7 +3,15 @@
 body {
   font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
   font-size: 16px;
-  margin: 0; }
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  min-height: 100vh; }
 
 h1 {
   border-bottom: 1px solid #d6dd89;
@@ -186,7 +194,10 @@ html {
 #page {
   background-color: #f2fbd2;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#f2fbd2), to(#f5f7e7));
-  background-image: linear-gradient(#f2fbd2, #f5f7e7); }
+  background-image: linear-gradient(#f2fbd2, #f5f7e7);
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
 
 #content.page-content {
   clear: both;
