--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -126,7 +126,7 @@
 .pane-page-slogan {
   display: inline-block;
   line-height: 1.3;
-  font-size: 12.5px;
+  // font-size: 12.5px;
   font-family: "Myriad Pro", "Myriad Web Pro Regular", "Lucida Grande", Geneva, Trebuchet MS, sans-serif;
   font-weight: bold;
   color: #444;
@@ -135,36 +135,40 @@
   text-align: center;
   margin-top: 0.5em;
 
-  @include breakpoint(400px){
-    width: 100%;
-    text-align: left;
-    margin-top: 0;
+  font-size: 14px;  // backup size
 
-    width: calc(100% + 18vw + 15px);
-    margin-left: calc(-18vw - 8px);
-    text-align: center;
-  }
+  @include fluid-type(400px, 1200px, 14px, 30px); // values inside are ($min_width,$max_width, $min_font, $max_font);
+
+  // @include breakpoint(400px){
+  //   width: 100%;
+  //   text-align: left;
+  //   margin-top: 0;
+
+  //   width: calc(100% + 18vw + 15px);
+  //   margin-left: calc(-18vw - 8px);
+  //   text-align: center;
+  // }
   
-  @include breakpoint(500px){
-    font-size: 2.5vw;
-  }
-  @include breakpoint(720px){
-    width: 100%;
-    margin-left: 0;
-    text-align: left;
-  }
-  @include breakpoint(768px){
-    font-size: 19px;
-    margin-left: -12px;
-  }
-  @include breakpoint(960px){
-    font-size: 24px;
-    margin-left: 18px;
-  }
-  @include breakpoint(1200px){
-    font-size: 30px;
-    margin-left: 29px;
-  }
+  // @include breakpoint(500px){
+  //   font-size: 2.5vw;
+  // }
+  // @include breakpoint(720px){
+  //   width: 100%;
+  //   margin-left: 0;
+  //   text-align: left;
+  // }
+  // @include breakpoint(768px){
+  //   font-size: 19px;
+  //   margin-left: -12px;
+  // }
+  // @include breakpoint(960px){
+  //   font-size: 24px;
+  //   margin-left: 18px;
+  // }
+  // @include breakpoint(1200px){
+  //   font-size: 30px;
+  //   margin-left: 29px;
+  // }
 }
 
 #header-group-inner {
