--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -77,9 +77,11 @@
 
 ul.sf-menu {
   font-family: "Myriad Pro", "Myriad Web Pro Regular", "Lucida Grande", Geneva, Trebuchet MS, sans-serif;
-  font-size: 100%;
   font-weight: bold;
   text-transform: uppercase;
+  font-size: 14px;  // backup size
+  @include fluid-type(400px, 718px, 14px, 18px); // values inside are ($min_width,$max_width, $min_font, $max_font);
+
 }
 
 a.menuparent:after {
@@ -169,15 +171,13 @@ ul.sf-vertical li ul li ul {
   border-radius: 10px;
   line-height: 1.5;
   padding: 0.25em 1em;
-  font-size: 12px;
   font-weight: bold;
   text-decoration: none;
   margin-bottom: 0.5em;
 
-  @include breakpoint(500px){
-    font-size: 18px;  /* fallback */
-    font-size: calc(12px + 1vw);
-  }
+  font-size: 14px;  // backup size
+  @include fluid-type(400px, 718px, 14px, 18px); // values inside are ($min_width,$max_width, $min_font, $max_font);
+
 
   &.sf-expanded {
     background-color: #7bc;
