--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1164,15 +1164,29 @@ ul.breadcrumb {
     border: 0;
     margin-top: 0;
     margin-bottom: 0.5em;
-    font-weight: inherit; }
+    font-weight: inherit;
+    text-transform: capitalize;
+    bottom-border: none;
+    font-weight: 700;
+    margin-bottom: 0em;
+    font-size: 24px; }
+    @media screen and (min-width: 400px) {
+      #page-title h1.page-title {
+        font-size: calc(24px + 8 * ((100vw - 400px) / 800)); } }
+    @media screen and (min-width: 1200px) {
+      #page-title h1.page-title {
+        font-size: 32px; } }
 
-.field.field--name-title-field {
+.field.field--name-title-field h1 {
+  text-transform: capitalize;
+  border-bottom: 1px solid #d6dd89;
+  font-weight: 700;
   font-size: 24px; }
   @media screen and (min-width: 400px) {
-    .field.field--name-title-field {
+    .field.field--name-title-field h1 {
       font-size: calc(24px + 8 * ((100vw - 400px) / 800)); } }
   @media screen and (min-width: 1200px) {
-    .field.field--name-title-field {
+    .field.field--name-title-field h1 {
       font-size: 32px; } }
 
 .views-ui-display-tab-bucket .advanced-help-link {
