--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -42,9 +42,20 @@
 		margin-top: 0;
 		margin-bottom: 0.5em;
 		font-weight: inherit;
+		text-transform: capitalize;
+		bottom-border: none;
+		font-weight: 700;
+		margin-bottom: 0em;
+
+		font-size: 24px;  // backup size
+		@include fluid-type(400px, 1200px, 24px, 32px); // values inside are ($min_width,$max_width, $min_font, $max_font);
 	}
 }
-.field.field--name-title-field {
+.field.field--name-title-field h1 {
+	text-transform: capitalize;
+	border-bottom: 1px solid #d6dd89;
+	font-weight: 700;
+
 	font-size: 24px;  // backup size
 	@include fluid-type(400px, 1200px, 24px, 32px); // values inside are ($min_width,$max_width, $min_font, $max_font);
 }
