--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -36,38 +36,45 @@ h2 a:active {
 }
 
 h1 {
-    font-size: 28px;  // backup size
-    @include fluid-type(718px, 1200px, 28px, 32px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+  text-transform: none;
+  font-weight: 700;
+  bottom-border: none;
+  font-size: 24px;  // backup size
+  @include fluid-type(400px, 1200px, 24px, 32px); // values inside are ($min_width,$max_width, $min_font, $max_font);
 }
 
 h2 {
-    font-size: 22px;
-    @include fluid-type(718px, 1200px, 22px, 24px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+  text-transform: none;
+  bottom-border: none;
+  font-size: 22px;
+  @include fluid-type(400px, 1200px, 20px, 26px); // values inside are ($min_width,$max_width, $min_font, $max_font);
 }
 
 h3 {
-    font-size: 16px;
-    @include fluid-type(718px, 1200px, 16px, 18px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+  font-size: 14px;
+  @include fluid-type(400px, 1200px, 14px, 18px); // values inside are ($min_width, $max_width, $min_font, $max_font);
 }
 
 h4 {
-    font-size: 14px;
-    @include fluid-type(718px, 1200px, 14px, 16px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+  font-size: 12px;
+  @include fluid-type(400px, 1200px, 14px, 16px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+
 }
 
 h5 {
-    font-size: 11px;
-    @include fluid-type(718px, 1200px, 11px, 13px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+  font-size: 10px;
+  @include fluid-type(400px, 1200px, 10px, 14px); // values inside are ($min_width, $max_width, $min_font, $max_font);
 }
 
 h6 {
-    font-size: 9px;
-    @include fluid-type(718px, 1200px, 9px, 10px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+  font-size: 9px;
+  @include fluid-type(400px, 1200px, 9px, 12px); // values inside are ($min_width, $max_width, $min_font, $max_font);
 }
 
 p {
   font-size: 13px;
-  @include fluid-type(718px, 1200px, 13px, 18px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+  @include fluid-type(400px, 1200px, 13px, 18px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+
 }
 
 /* Default link styles - separate a:visited for a different visited
@@ -201,10 +208,4 @@ html {
   border-width: 1px;
   padding: 1em;
   margin: .5em 0;
-}
-
-.field--name-title-field h1 {
-  text-align: center;
-  margin: 0 0 1rem 0;
-  border: 0;
 }
