--- a/sass/components/_blog_pages.scss
+++ b/sass/components/_blog_pages.scss
@@ -132,7 +132,6 @@
       .boxed {
         .pane-title {
         	position: static;
-          margin-bottom: 1em;
           text-align: center;
         }
       }
@@ -521,7 +520,7 @@
 
 .views-field-title-field h2 {
   text-transform: none;
-  bottom-border: none;
+  border-bottom: none;
   font-size: 22px;
   @include fluid-type(400px, 1200px, 20px, 26px); // values inside are ($min_width,$max_width, $min_font, $max_font);
 }
