--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -40,7 +40,7 @@
 	h1.page-title {
 		margin-top: 0;
 		text-transform: capitalize;
-		bottom-border: none;
+		border-bottom: 0;
 		margin-bottom: 0em;
 
 		font-size: 24px;  // backup size
