--- a/sass/components/_blog_pages.scss
+++ b/sass/components/_blog_pages.scss
@@ -207,6 +207,11 @@
       }
       .views-field-body {
         width: 100%;
+
+        .field-content {
+          width: 100%;
+        }
+
         img {
           display: block;
           height: auto;
