--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1222,7 +1222,13 @@ h2.pane-title {
 
 #footer {
   border-top: 3px solid #a7cf38;
-  font-size: 90%; }
+  font-size: 9px; }
+  @media screen and (min-width: 400px) {
+    #footer {
+      font-size: calc(9px + 3 * ((100vw - 400px) / 800)); } }
+  @media screen and (min-width: 1200px) {
+    #footer {
+      font-size: 12px; } }
   #footer:before {
     content: '';
     height: 30px;
@@ -1233,7 +1239,14 @@ h2.pane-title {
 
 .copyright p {
   text-align: center;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  font-size: 9px; }
+  @media screen and (min-width: 400px) {
+    .copyright p {
+      font-size: calc(9px + 3 * ((100vw - 400px) / 800)); } }
+  @media screen and (min-width: 1200px) {
+    .copyright p {
+      font-size: 12px; } }
 
 .pane-menu-menu-footer-links ul.menu {
   text-align: center; }
