--- a/sass/components/_maintenance.scss
+++ b/sass/components/_maintenance.scss
@@ -16,7 +16,7 @@
     width: 100%;
   }
 
-  h1.site-name {
+  h1.pane-page-site-name {
     a {
       font-family: 'Yesteryear', Verdana, Geneva, Arial, Helvetica, sans-serif;
     }
