--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -131,24 +131,28 @@
   font-family: "Myriad Pro", "Myriad Web Pro Regular", "Lucida Grande", Geneva, Trebuchet MS, sans-serif;
   font-weight: bold;
   color: #444;
-  // width: calc(100% + 95.45px);
-  // margin-left: -95.45px;
-  // text-align: center;
+  width: calc(100% + 95.45px);
+  margin-left: -95.45px;
+  text-align: center;
   // margin-top: 0.5em;
 
   font-size: 14px;  // backup size
 
   @include fluid-type(400px, 1200px, 14px, 30px); // values inside are ($min_width,$max_width, $min_font, $max_font);
 
-  // @include breakpoint(400px){
-  //   width: 100%;
-  //   text-align: left;
-  //   margin-top: 0;
+  @include breakpoint(400px){
+    width: 100%;
+    // text-align: left;
+    // margin-top: 0;
 
-  //   width: calc(100% + 18vw + 15px);
-  //   margin-left: calc(-18vw - 8px);
-  //   text-align: center;
-  // }
+    // width: calc(100% + 18vw + 15px);
+    // margin-left: calc(-18vw - 8px);
+    // text-align: center;
+  }
+
+  @include breakpoint(586px){
+    text-align: left;
+  }
   
   // @include breakpoint(500px){
   //   font-size: 2.5vw;
