--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1552,9 +1552,8 @@ legend.collapse-processed a:visited {
       font-size: 30px; } }
   @media (min-width: 400px) {
     .pane-page-slogan {
-      width: 100%; } }
-  @media (min-width: 586px) {
-    .pane-page-slogan {
+      width: 100%;
+      margin-left: 0;
       text-align: left; } }
 
 #header-group-inner {
