--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1222,13 +1222,13 @@ h2.pane-title {
 
 #footer {
   border-top: 3px solid #a7cf38;
-  font-size: 9px; }
+  font-size: 10px; }
   @media screen and (min-width: 400px) {
     #footer {
-      font-size: calc(9px + 3 * ((100vw - 400px) / 800)); } }
+      font-size: calc(10px + 4 * ((100vw - 400px) / 800)); } }
   @media screen and (min-width: 1200px) {
     #footer {
-      font-size: 12px; } }
+      font-size: 14px; } }
   #footer:before {
     content: '';
     height: 30px;
@@ -1239,14 +1239,7 @@ h2.pane-title {
 
 .copyright p {
   text-align: center;
-  margin-bottom: 0;
-  font-size: 9px; }
-  @media screen and (min-width: 400px) {
-    .copyright p {
-      font-size: calc(9px + 3 * ((100vw - 400px) / 800)); } }
-  @media screen and (min-width: 1200px) {
-    .copyright p {
-      font-size: 12px; } }
+  margin-bottom: 0; }
 
 .pane-menu-menu-footer-links ul.menu {
   text-align: center; }
