--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1239,7 +1239,14 @@ h2.pane-title {
 
 .copyright p {
   text-align: center;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  font-size: 10px; }
+  @media screen and (min-width: 400px) {
+    .copyright p {
+      font-size: calc(10px + 4 * ((100vw - 400px) / 800)); } }
+  @media screen and (min-width: 1200px) {
+    .copyright p {
+      font-size: 14px; } }
 
 .pane-menu-menu-footer-links ul.menu {
   text-align: center; }
@@ -1247,14 +1254,7 @@ h2.pane-title {
     display: inline-block;
     margin-right: 0.5em; }
     .pane-menu-menu-footer-links ul.menu li a {
-      text-decoration: none;
-      font-size: 10px; }
-      @media screen and (min-width: 400px) {
-        .pane-menu-menu-footer-links ul.menu li a {
-          font-size: calc(10px + 4 * ((100vw - 400px) / 800)); } }
-      @media screen and (min-width: 1200px) {
-        .pane-menu-menu-footer-links ul.menu li a {
-          font-size: 14px; } }
+      text-decoration: none; }
 
 form input.form-submit {
   background-color: #286e9b;
